set(PROJECT_NAME "LearnRayTracing")
CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
cmake_policy(VERSION 3.2)
set(${PROJECT_NAME}_VERSION "0.1.0")
set(${PROJECT_NAME}_VERSION_MINOR 0)
set(${PROJECT_NAME}_VERSION_MAJOR 1)

project(${PROJECT_NAME} VERSION ${${PROJECT_NAME}_VERSION} LANGUAGES CXX)
file(GLOB_RECURSE SOURCE_FILES "src/*.cpp")
file(GLOB_RECURSE HEADER_FILES "src/*.h")


INCLUDE_DIRECTORIES(src)
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES} ${HEADER_FILES})

INCLUDE_DIRECTORIES(libs/glm)
ADD_SUBDIRECTORY(libs/glm)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} glm_static)

